--- a/config/database.yml
+++ b/config/database.yml
@@ -10,10 +10,15 @@ defaults: &defaults
   pool: 5
   timeout: 5000
   host: <%= ENV['DB_HOST'] || "localhost" %>
-  <<: *<%= ENV['DB'] || "mysql" %>
 
 development:
-  <<: *defaults
+  adapter: mysql2
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
+  username: root
+  password: ''
+  database: <%= "forplay_#{Rails.env}" %>
+  host: localhost
 
 test:
   <<: *defaults
