--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,3 @@
-mysql: &mysql
-  adapter: mysql2
-  encoding: utf8mb4
-  collation: utf8mb4_unicode_ci
-  username: root
-  password: ''
-  database: <%= "forplay_#{Rails.env}" %>
-
-defaults: &defaults
-  pool: 5
-  timeout: 5000
-  host: <%= ENV['DB_HOST'] || "localhost" %>
-
 development:
   adapter: mysql2
   encoding: utf8mb4
@@ -21,7 +8,19 @@ development:
   host: localhost
 
 test:
-  <<: *defaults
+  adapter: mysql2
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
+  username: root
+  password: ''
+  database: <%= "forplay_#{Rails.env}" %>
+  host: localhost
 
 production:
-  <<: *defaults
+  adapter: mysql2
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
+  username: root
+  password: ''
+  database: <%= "forplay_#{Rails.env}" %>
+  host: localhost
