--- a/config/database.yml
+++ b/config/database.yml
@@ -25,3 +25,13 @@ staging:
   database: forplay_production
   host: forplay.ci3jtk7usdj0.eu-west-2.rds.amazonaws.com
   port: 3306
+
+production:
+  adapter: mysql2
+  encoding: utf8mb4
+  collation: utf8mb4_unicode_ci
+  username: admin
+  password: password
+  database: forplay_production
+  host: forplay.ci3jtk7usdj0.eu-west-2.rds.amazonaws.com
+  port: 3306
